--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="apple-mobile-web-app-title" content="Center" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <link rel="apple-touch-icon" href="public/ic.svg" />
-    <link rel="apple-touch-icon" sizes="152x152" href="public/ic.svg" />
+    <link rel="apple-touch-icon" href="ic.svg" />
+    <link rel="apple-touch-icon" sizes="152x152" href="ic.svg" />
     <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" type="image/svg+xml" href="/ic.svg" />
+    <link rel="icon" type="image/svg+xml" href="ic.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Persona Center</title>
